ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/ResidentialLoanApplication__c.object-meta.xml
<CustomObject>
    <label>Residential Loan Application</label>
    <nameField>
        <label>Residential Loan Application Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Residential Loan Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>