ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Residential Loan Applications</relationshipLabel>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>