ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/AccountantsDeclaration__c.field-meta.xml
<CustomField>
    <fullName>AccountantsDeclaration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accountant&apos;s Declaration</label>
    <type>Checkbox</type>
</CustomField>