ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/AdditionalUpfrontContributions__c.field-meta.xml
<CustomField>
    <fullName>AdditionalUpfrontContributions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Upfront Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>