ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/AFGError__c.field-meta.xml
<CustomField>
    <fullName>AFGError__c</fullName>
    <label>AFG Logs</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>