ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/AFGId__c.field-meta.xml
<CustomField>
    <fullName>AFGId__c</fullName>
    <label>AFG Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>