ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/AFGStatus__c.field-meta.xml
<CustomField>
    <fullName>AFGStatus__c</fullName>
    <label>AFG Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>