ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/annualHemValue__c.field-meta.xml
<CustomField>
    <fullName>annualHemValue__c</fullName>
    <label>Annual Hem Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>