ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>ApplicationId__c</fullName>
    <externalId>true</externalId>
    <label>Application Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>