ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>ApplicationStatus__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApplicationStatusCodes</valueSetName>
    </valueSet>
</CustomField>