ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ApprovalDate__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>