ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ApprovedLoanAmount__c.field-meta.xml
<CustomField>
    <fullName>ApprovedLoanAmount__c</fullName>
    <label>Approved Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>