ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ATOTaxAssessmentTaxReturns__c.field-meta.xml
<CustomField>
    <fullName>ATOTaxAssessmentTaxReturns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATO Tax Assessment / Tax Returns</label>
    <type>Checkbox</type>
</CustomField>