ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/AuctionDate__c.field-meta.xml
<CustomField>
    <fullName>AuctionDate__c</fullName>
    <label>Auction Date</label>
    <type>Date</type>
</CustomField>