ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/CashSavings__c.field-meta.xml
<CustomField>
    <fullName>CashSavings__c</fullName>
    <label>Cash Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>