ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ClosedStatus__c.field-meta.xml
<CustomField>
    <fullName>ClosedStatus__c</fullName>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Unable to Contact</fullName>
            </value>
            <value>
                <fullName>Withdrawn - NPW</fullName>
            </value>
            <value>
                <fullName>Withdrawn - Pricing</fullName>
            </value>
            <value>
                <fullName>Lost - Servicing</fullName>
            </value>
            <value>
                <fullName>Lost - Policy</fullName>
            </value>
            <value>
                <fullName>Lost - Security</fullName>
            </value>
            <value>
                <fullName>Lost - Ineligible</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>