ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ClosedWon__c.field-meta.xml
<CustomField>
    <fullName>ClosedWon__c</fullName>
    <formula>AND(TEXT(ApplicationStatus__c)=&apos;1848&apos; , TEXT(ClosedStatus__c)= &apos;Won&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Won</label>
    <type>Checkbox</type>
</CustomField>