ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ConveyancingFees__c.field-meta.xml
<CustomField>
    <fullName>ConveyancingFees__c</fullName>
    <label>Conveyancing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>