ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/CreditProposalGreetings__c.field-meta.xml
<CustomField>
    <fullName>CreditProposalGreetings__c</fullName>
    <label>Credit Proposal Greetings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>