ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/CustomerSelectedProduct__c.field-meta.xml
<CustomField>
    <fullName>CustomerSelectedProduct__c</fullName>
    <label>Customer Selected Product</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>