ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DaysSinceCreatedAuto__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceCreatedAuto__c</fullName>
    <formula>TEXT(TODAY() - LodgementDate__c )+  &apos; days since lodged&apos; + IF(TODAY() - LodgementDate__c&gt;80, IMAGE(&quot;https://comparethemarket--partial.sandbox.file.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0681m000000U94H&amp;operationContext=CHATTER&amp;contentId=05T1m000001Rsz1&quot;,&quot;warining&quot;, 15,15), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Created</label>
    <type>Text</type>
</CustomField>