ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DepositPaid__c.field-meta.xml
<CustomField>
    <fullName>DepositPaid__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Deposit Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>