ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DepositSavingsAccountStatements__c.field-meta.xml
<CustomField>
    <fullName>DepositSavingsAccountStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deposit / Savings Account Statements</label>
    <type>Checkbox</type>
</CustomField>