ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DesiredSurplus__c.field-meta.xml
<CustomField>
    <fullName>DesiredSurplus__c</fullName>
    <description>An additional amount of money above that is required for the property</description>
    <label>Desired Surplus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>