ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DocUploadUrl__c.field-meta.xml
<CustomField>
    <fullName>DocUploadUrl__c</fullName>
    <formula>IF( CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &apos;dev&apos;) , &apos;https://dev.comparethemarket.com.au/homeloans/compare/&apos;+ApplicationId__c+&apos;/application/document-upload-select-category&apos;, IF( CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &apos;partial&apos;) , &apos;https://partial.comparethemarket.com.au/homeloans/compare/&apos;+ApplicationId__c+&apos;/application/document-upload-select-category&apos;, &apos;https://comparethemarket.com.au/homeloans/compare/&apos;+ApplicationId__c+&apos;/application/document-upload-select-category&apos;))</formula>
    <label>Doc Upload Url</label>
    <type>Text</type>
</CustomField>