ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DSGenDate__c.field-meta.xml
<CustomField>
    <fullName>DSGenDate__c</fullName>
    <description>Used for DocuSign Gen credit proposal to show todays date</description>
    <formula>Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Gen Date</label>
    <type>Date</type>
</CustomField>