ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/DTI__c.field-meta.xml
<CustomField>
    <fullName>DTI__c</fullName>
    <inlineHelpText>DTI stands for Debt-to-Income ratio. It is a measure used by lenders to assess a borrower&apos;s ability to manage their monthly debt payments in relation to their income.</inlineHelpText>
    <label>DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>