ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/excludedDeclaredMonthlyExpenses__c.field-meta.xml
<CustomField>
    <fullName>excludedDeclaredMonthlyExpenses__c</fullName>
    <label>Excluded Declared Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>