ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ExitStrategyCode__c.field-meta.xml
<CustomField>
    <fullName>ExitStrategyCode__c</fullName>
    <label>Exit Strategy Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PostRetirementRepaymentPlan</valueSetName>
    </valueSet>
</CustomField>