ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ExitStrategyDescription__c.field-meta.xml
<CustomField>
    <fullName>ExitStrategyDescription__c</fullName>
    <description>Text description of the Exit Strategy</description>
    <label>Exit Strategy Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>