ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ExpectedSettlementDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSettlementDate__c</fullName>
    <label>Expected Settlement Date</label>
    <type>DateTime</type>
</CustomField>