ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ExternalApplicationID__c.field-meta.xml
<CustomField>
    <fullName>ExternalApplicationID__c</fullName>
    <label>External Application ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>