ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/FHOG__c.field-meta.xml
<CustomField>
    <fullName>FHOG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>FHOG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>