ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/FirstHomeBuyers__c.field-meta.xml
<CustomField>
    <fullName>FirstHomeBuyers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Home Buyers?</label>
    <type>Checkbox</type>
</CustomField>