ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/FlexiId__c.field-meta.xml
<CustomField>
    <fullName>FlexiId__c</fullName>
    <description>Flexi Id for AFG Submission for brokers</description>
    <formula>Owner:User.FlexiId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flexi Id</label>
    <type>Text</type>
</CustomField>