ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/GiftAmount__c.field-meta.xml
<CustomField>
    <fullName>GiftAmount__c</fullName>
    <description>Available funds gifted to the applicants.</description>
    <label>Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>