ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/GovernmentMortgageRegistrationFee__c.field-meta.xml
<CustomField>
    <fullName>GovernmentMortgageRegistrationFee__c</fullName>
    <label>Government Mortgage Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>