ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/GovernmentStampDuty__c.field-meta.xml
<CustomField>
    <fullName>GovernmentStampDuty__c</fullName>
    <label>Government Stamp Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>