ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/GovernmentTransferFee__c.field-meta.xml
<CustomField>
    <fullName>GovernmentTransferFee__c</fullName>
    <label>Government Transfer Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>