ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/HEMDependants__c.field-meta.xml
<CustomField>
    <fullName>HEMDependants__c</fullName>
    <label>HEM Dependants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>