ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/HEMIncome__c.field-meta.xml
<CustomField>
    <fullName>HEMIncome__c</fullName>
    <label>HEM Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>