ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/HEMLocation__c.field-meta.xml
<CustomField>
    <fullName>HEMLocation__c</fullName>
    <label>HEM Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>