ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/HEMtableVersion__c.field-meta.xml
<CustomField>
    <fullName>HEMtableVersion__c</fullName>
    <label>HEM Table Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>