ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/HOC__c.field-meta.xml
<CustomField>
    <fullName>HOC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the Applicants meet the requirements for the First Home Owner Stamp Duty Concession</description>
    <inlineHelpText>Indicate if the Applicants meet the requirements for the First Home Owner Stamp Duty Concession</inlineHelpText>
    <label>HOC</label>
    <type>Checkbox</type>
</CustomField>