ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/IDH__c.field-meta.xml
<CustomField>
    <fullName>IDH__c</fullName>
    <label>IDH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>