ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/includedDeclaredMonthlyExpenses__c.field-meta.xml
<CustomField>
    <fullName>includedDeclaredMonthlyExpenses__c</fullName>
    <label>Included Declared Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>