ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/IncomeCheckOther__c.field-meta.xml
<CustomField>
    <fullName>IncomeCheckOther__c</fullName>
    <label>Income Check Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>