ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/InterestOnly__c.field-meta.xml
<CustomField>
    <fullName>InterestOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interest Only</label>
    <type>Checkbox</type>
</CustomField>