ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LegalRepresentation__c.field-meta.xml
<CustomField>
    <fullName>LegalRepresentation__c</fullName>
    <label>Legal Representation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Applicants Themselves</fullName>
            </value>
            <value>
                <fullName>Solicitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>