ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner - Home Loan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Residential Loan Applications (Lender)</relationshipLabel>
    <relationshipName>Residential_Loan_Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>