ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LenderApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>LenderApplicationFee__c</fullName>
    <label>Lender Application Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>