ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LenderLogo__c.field-meta.xml
<CustomField>
    <fullName>LenderLogo__c</fullName>
    <formula>if(LogoURL__c != &apos;&apos;, IMAGE(LogoURL__c,&apos;&apos;, 50,100), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Logo</label>
    <type>Text</type>
</CustomField>