ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LenderName__c.field-meta.xml
<CustomField>
    <fullName>LenderName__c</fullName>
    <label>Lender Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>