ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LenderNote__c.field-meta.xml
<CustomField>
    <fullName>LenderNote__c</fullName>
    <label>Lender Note</label>
    <type>TextArea</type>
</CustomField>