ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LenderReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>LenderReferenceNumber__c</fullName>
    <label>Lender Reference Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>