ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LenderValuationFee__c.field-meta.xml
<CustomField>
    <fullName>LenderValuationFee__c</fullName>
    <label>Lender Valuation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>