ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LMI__c.field-meta.xml
<CustomField>
    <fullName>LMI__c</fullName>
    <label>LMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>