ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LoanAmountLessFees__c.field-meta.xml
<CustomField>
    <fullName>LoanAmountLessFees__c</fullName>
    <formula>LoanAmount__c -  TotalLoanCosts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount Less Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>