ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LoanDurationinMonths__c.field-meta.xml
<CustomField>
    <fullName>LoanDurationinMonths__c</fullName>
    <label>Loan Duration in Months</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>