ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LoanPurpose__c.field-meta.xml
<CustomField>
    <fullName>LoanPurpose__c</fullName>
    <label>Loan Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Purchase Residential Property</fullName>
            </value>
            <value>
                <fullName>Refinance Residential Property</fullName>
            </value>
            <value>
                <fullName>Construct Residential Property on Vacant Land</fullName>
            </value>
            <value>
                <fullName>Purchase Vacant Land Construct Residential Property</fullName>
            </value>
            <value>
                <fullName>Purchase Vacant Land</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>