ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LoanStatements__c.field-meta.xml
<CustomField>
    <fullName>LoanStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Statements</label>
    <type>Checkbox</type>
</CustomField>