ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LoanSubPurpose__c.field-meta.xml
<CustomField>
    <fullName>LoanSubPurpose__c</fullName>
    <label>Loan SubPurpose</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LoanPurpose__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner Occupied</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Undertake major home renovations</fullName>
            </value>
            <value>
                <fullName>Undertake minor home renovations</fullName>
            </value>
            <value>
                <fullName>Obtain a lower interest rate</fullName>
            </value>
            <value>
                <fullName>Consolidate debt</fullName>
            </value>
            <value>
                <fullName>For property investment purposes</fullName>
            </value>
            <value>
                <fullName>For business or investment purposes</fullName>
            </value>
            <value>
                <fullName>Cash for personal use</fullName>
            </value>
            <value>
                <fullName>A loan to better suit needs</fullName>
            </value>
            <value>
                <fullName>Access available equity</fullName>
            </value>
            <value>
                <fullName>Unhappy with current lender</fullName>
            </value>
            <value>
                <fullName>Looking to reduce my repayments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>