ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LodgementDate__c.field-meta.xml
<CustomField>
    <fullName>LodgementDate__c</fullName>
    <label>Lodgement Date</label>
    <type>Date</type>
</CustomField>