ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LTI__c.field-meta.xml
<CustomField>
    <fullName>LTI__c</fullName>
    <inlineHelpText>LTI stands for Loan-to-Income ratio. It is a measure used by lenders to assess the affordability of a loan based on the borrower&apos;s income, comparing the loan amount to their gross income.</inlineHelpText>
    <label>LTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>