ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/LVRincLMI__c.field-meta.xml
<CustomField>
    <fullName>LVRincLMI__c</fullName>
    <label>LVR inc. LMI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>