ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/MonthlyHemValue__c.field-meta.xml
<CustomField>
    <fullName>MonthlyHemValue__c</fullName>
    <label>Monthly Hem Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>