ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/NetWorth__c.field-meta.xml
<CustomField>
    <fullName>NetWorth__c</fullName>
    <formula>TotalFinancialAssets__c -  TotalFinancialLiabilities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Worth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>