ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/nonContingentCalDebtExpenses__c.field-meta.xml
<CustomField>
    <fullName>nonContingentCalDebtExpenses__c</fullName>
    <label>Non Contingent Cal Debt Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>