ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Number_of_Applicants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Applicants__c</fullName>
    <label>Number of Applicants</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>