ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OnHoldDate__c.field-meta.xml
<CustomField>
    <fullName>OnHoldDate__c</fullName>
    <label>On Hold Date</label>
    <type>DateTime</type>
</CustomField>