ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Residential Loan Applications</relationshipLabel>
    <relationshipName>Residential_Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>