ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OtherLenderFees__c.field-meta.xml
<CustomField>
    <fullName>OtherLenderFees__c</fullName>
    <label>Other Lender Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>