ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OtherLoanPurpose__c.field-meta.xml
<CustomField>
    <fullName>OtherLoanPurpose__c</fullName>
    <label>Other Loan Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>