ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OtherPleaseSpecify__c.field-meta.xml
<CustomField>
    <fullName>OtherPleaseSpecify__c</fullName>
    <label>Other (Please Specify)</label>
    <type>TextArea</type>
</CustomField>