ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>OwnerEmail__c</fullName>
    <label>Owner Email</label>
    <type>Email</type>
</CustomField>