ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OwnerFirstName__c.field-meta.xml
<CustomField>
    <fullName>OwnerFirstName__c</fullName>
    <label>Owner First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>