ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OwnerPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>OwnerPhoneNumber__c</fullName>
    <label>Owner Phone Number</label>
    <type>Phone</type>
</CustomField>