ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OwnerProfileDescription__c.field-meta.xml
<CustomField>
    <fullName>OwnerProfileDescription__c</fullName>
    <label>Owner Profile Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>