ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OwnerProfilePictureURL__c.field-meta.xml
<CustomField>
    <fullName>OwnerProfilePictureURL__c</fullName>
    <label>Owner Profile Picture URL</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>