ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/OwnFunds__c.field-meta.xml
<CustomField>
    <fullName>OwnFunds__c</fullName>
    <label>Own Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>