ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/PAYGSlips__c.field-meta.xml
<CustomField>
    <fullName>PAYGSlips__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYG Slips</label>
    <type>Checkbox</type>
</CustomField>