ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Pre_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Approval?</label>
    <type>Checkbox</type>
</CustomField>