ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/PreApprovalHeld__c.field-meta.xml
<CustomField>
    <fullName>PreApprovalHeld__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-approval Held?</label>
    <type>Checkbox</type>
</CustomField>