ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ProductHash__c.field-meta.xml
<CustomField>
    <fullName>ProductHash__c</fullName>
    <label>Product Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>