ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <label>Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>