ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/Reasonsforrefinancing__c.field-meta.xml
<CustomField>
    <fullName>Reasonsforrefinancing__c</fullName>
    <label>Reasons for Refinancing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LoanRefinanceReason</valueSetName>
    </valueSet>
</CustomField>