ctm-sf-homeloan-app/main/default/objects/ResidentialLoanApplication__c/fields/ReceiveDocumentation__c.field-meta.xml
<CustomField>
    <fullName>ReceiveDocumentation__c</fullName>
    <label>Receive Documentation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Applicants</fullName>
            </value>
            <value>
                <fullName>Loan Writer</fullName>
            </value>
            <value>
                <fullName>Primary Applicant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>